# apt-watch

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  protocol.txt
backend/: Makefile.am  Makefile.in  apt-watch-auth-helper.cc  apt-watch-slave.cc
common/: Makefile.am  Makefile.in  apt-watch-common.cc  apt-watch-common.h  fileutl.cc  fileutl.h  test_fileutl.cc
ui-gnome/: Makefile.am  Makefile.in  apt-watch-gnome.cc  apt-watch-gnome.h  apt-watch-preferences.cc  apt-watch.glade  apt-watch.schemas  apt-watch.server.in  apt-watch.ui  org.gnome.panel.Apt_Watch.panel-applet.in  org.gnome.panel.applet.Apt_WatchApplet_Factory.service.in  org.gnome.panel.applet.Apt_WatchFactory.service.in  prefs-check-freq.cc  prefs-check-freq.h  prefs-download-upgrade.cc  prefs-download-upgrade.h  prefs-notify.cc  prefs-notify.h  prefs-package-manager.cc  prefs-package-manager.h
ui-gnome/pixmaps/: Makefile.am  Makefile.in
